dynamically tested the UI

--- a/src/app/components/Doctor-dashboard/dashboard.component.html
+++ b/src/app/components/Doctor-dashboard/dashboard.component.html
@@ -48,7 +48,7 @@
 </div>
 
 
-<div class="chat-btn" [ngClass]="{'active': isChatBtnActive}" (click)="toggleChat()">
+<!-- <div class="chat-btn" [ngClass]="{'active': isChatBtnActive}" (click)="toggleChat()">
   <div>
     <div class="left-eye"></div>
     <div class="mouth"></div>
@@ -58,7 +58,7 @@
 
 <!-- Chat Widget Container -->
  <!---->
-<div class="chat-widget-container" [ngClass]="{'open': isChatOpen}">
+<!-- <div class="chat-widget-container" [ngClass]="{'open': isChatOpen}">
   <div class="chat-header">
     <h3>Medical Assistant</h3>
     <button class="close-btn" (click)="toggleChat()">&times;</button>
@@ -78,4 +78,4 @@
           (keyup.enter)="sendMessage()">
     <button (click)="sendMessage()">Send</button>
   </div>
-</div>
+</div> --> -->
