--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -46,7 +46,7 @@
     </div>
     
     <button
-      class="Summit"
+      class="submit-btn"
       (click)="login()"
       [disabled]="!userName || !password || !userType"
     >
