--- a/src/app/components/patient-dashboard/patient-dashboard.component.css
+++ b/src/app/components/patient-dashboard/patient-dashboard.component.css
@@ -62,6 +62,7 @@ body {
 }
 
 .profile-img {
+  display: flex;
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -271,3 +272,4 @@ ul.space-y-3 li p strong {
     padding: 12px 15px;
   }
 }
+
